2011-09-20  NIIBE Yutaka  <gniibe@fsij.org>

	* src/random.c (PROBABILITY_50_BY_TICK): New.
	(ep_add): Use ROTATE for final feedback only.
	(fnv32_hash): New.
	(ep_output): Rename (was: ep_value).  Use fnv32_hash.

2011-08-29  NIIBE Yutaka  <gniibe@fsij.org>

	* src/random.c (ep_add): New argument another_random_bit.
	(crc32_top_bit, crc32_add_bit): Delete.
	(tmt_init): New.
	(rng_gen): Call ep_add with SysTick->VAL shake.
	Don't shake PRNG by interrupt timing.
	(neug_prng_reseed): New.

	* src/main.c (main): Call neug_prng_reseed after new connection.

	* src/neug.h (neug_prng_reseed): New.

2011-08-19  NIIBE Yutaka  <gniibe@fsij.org>

	* src/random.c (tmt_one_step): No argument.
	(crc32_top_bit, crc32_add_bit): New.
	(rng_gen): Have return value.  Put interrupt timing entropy
	to CRC32 shift register, and use the top bit of CRC32 to
	shake the steps of TMT.

2011-08-10  NIIBE Yutaka  <gniibe@fsij.org>

	* boards/STM8S_DISCOVERY/mcuconf.h: New.
	* boards/STM8S_DISCOVERY/board.h: New.
	* boards/STM8S_DISCOVERY/board.c: New.

2011-07-22  NIIBE Yutaka  <gniibe@fsij.org>

	* boards/OLIMEX_STM32_H103/mcuconf.h (STM32_USBPRE): Add.

	* src/main.c (main): Fix one shot logic.

2011-07-21  NIIBE Yutaka  <gniibe@fsij.org>

	* src/neug.h (NEUG_PRE_LOOP): New.

	* src/main.c (led_blinker): New.
	(main): Use led_blinker.
	(main): Call neug_get before USB configuration at least
	NEUG_PRE_LOOP times.

2011-07-14  NIIBE Yutaka  <gniibe@fsij.org>

	* src/configure: Support CQ_STARM.
	* boards/CQ_STARM: Added.

	* Version 0.00.
